--- a/Documents/FairPlay/app/build.gradle
+++ b/Documents/FairPlay/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.fairplay"
-        minSdk 16
+        minSdk 23
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -20,6 +20,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    buildFeatures{
+        viewBinding true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
