--- a/Documents/FairPlay/app/src/main/AndroidManifest.xml
+++ b/Documents/FairPlay/app/src/main/AndroidManifest.xml
@@ -11,14 +11,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FairPlay"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".About_Us"
+            android:exported="false"
+            tools:ignore="Instantiatable"/>
+        <activity
+            android:name=".Tic_Tac_Toe"
+            android:exported="false"
+            />
+        <activity
             android:name=".Math_Quiz"
-            android:exported="false" />
+            android:exported="false"
+            />
         <activity
             android:name=".Maze_World"
-            android:exported="false" />
+            android:exported="false"
+            />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -28,6 +38,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
